--- a/examples/assets/css/base.css
+++ b/examples/assets/css/base.css
@@ -2,6 +2,10 @@
   display: flex;
 }
 
+body {
+  background: rgb(17, 17, 17);
+}
+
 nav {
   min-width: 150px;
 }
@@ -10,4 +14,61 @@ nav {
   position: relative;
   width: 500px;
   height: 500px;
+}
+
+.tall {
+  width: 100%;
+  height: calc(100% / 11 * 12);
+}
+
+.sg-wrap .sg-grid {
+  opacity: 1;
+  stroke-width: 2;
+}
+
+.sg-grid line {
+  vector-effect: non-scaling-stroke;
+  stroke: black;
+}
+
+sg-hand {
+  display: flex;
+  flex: 1;
+  justify-content: space-around;
+  width: 100%;
+  height: 70px;
+  position: absolute;
+}
+.hand-top {
+  top: -16%;
+}
+.hand-bot {
+  top: 101%;
+}
+
+.sg-wrap sg-hand piece {
+  display: block;
+  position: relative;
+  width: calc(100% / 7);
+  height: 100%;
+  margin: unset;
+  cursor: pointer;
+  pointer-events: auto;
+}
+
+.sg-wrap sg-hand piece::after {
+  content: attr(data-nb);
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  line-height: 0.9em;
+  padding: 3px 0.3em;
+  font-weight: bold;
+  font-size: 1.5em;
+  color: black;
+  background-color: coral;
+}
+
+.sg-wrap sg-hand piece.selected {
+  border: 2px solid green;
 }
