--- a/examples/assets/css/shogiground.css
+++ b/examples/assets/css/shogiground.css
@@ -116,7 +116,7 @@ sg-board piece.fading {
 }
 .sg-wrap svg {
   overflow: hidden;
-  position: relative;
+  position: absolute;
   top: 0px;
   left: 0px;
   width: 100%;
