--- a/examples/assets/css/boards.css
+++ b/examples/assets/css/boards.css
@@ -1,4 +1,5 @@
 .sg-wrap sg-board {
   background-image: url('../board/wood1.png');
   background: darkseagreen;
+  background-image: url('../board/ban2.jpg');
 }
