--- a/examples/assets/css/shogiground.css
+++ b/examples/assets/css/shogiground.css
@@ -24,29 +24,26 @@ sg-board {
 
 sg-squares,
 sg-pieces {
+  display: block;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
 }
 
 sg-pieces {
   line-height: 0;
-  background-size: contain;
   pointer-events: none;
 }
 
 sg-squares {
   display: grid;
   grid-template: repeat(9, 1fr) / repeat(9, 1fr);
-  grid-gap: 1px;
   gap: 1px;
   cursor: pointer;
+  background-size: cover;
 }
 sg-squares sq.move-dest {
   background: radial-gradient(rgba(20, 85, 30, 0.5) 22%, #208530 0, rgba(0, 0, 0, 0.3) 0, rgba(0, 0, 0, 0) 0);
@@ -85,7 +82,7 @@ sg-squares sq.check {
 sg-squares sq.current-premove {
   background-color: rgba(20, 30, 85, 0.5);
 }
-.sg-wrap piece {
+sg-pieces piece {
   position: absolute;
   top: 0;
   left: 0;
@@ -94,18 +91,20 @@ sg-squares sq.current-premove {
   margin: calc(-50% / 9);
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   z-index: 3;
   pointer-events: none;
+  will-change: auto;
 }
 sg-pieces piece.dragging {
-  cursor: move;
-  z-index: 9;
+  will-change: transform;
+  z-index: 10;
 }
 sg-pieces piece.anim {
-  z-index: 8;
+  z-index: 3;
 }
 sg-pieces piece.fading {
-  z-index: 1;
+  z-index: 2;
   opacity: 0.5;
 }
 .sg-wrap square.move-dest:hover {
