PNG pieces require will-change: transform to not be blurry

--- a/examples/assets/css/pieces/Portella.css
+++ b/examples/assets/css/pieces/Portella.css
@@ -1,5 +1,5 @@
 piece {
-  will-change: transform;
+  will-change: transform !important;
 }
 piece.pawn.sente,
 .sg-wrap.orientation-sente piece.pawn.sente,
