--- a/examples/assets/css/themes/wood-grid.css
+++ b/examples/assets/css/themes/wood-grid.css
@@ -1,7 +1,7 @@
 .sg-wrap sg-squares {
   border-top: 1px solid black;
   border-left: 1px solid black;
-  background-image: url('../../board/ban2.jpg');
+  background-image: url('../../board/new_board.png');
 }
 
 /* grid */
