Separate dragged piece element, drag overlay for touch, some small tweaks

--- a/examples/assets/css/d5x5.css
+++ b/examples/assets/css/d5x5.css
@@ -4,5 +4,5 @@
 .d-5x5 piece {
   width: calc(200% / 5);
   height: calc(200% / 5);
-  margin: calc(-50% / 5);
+  margin: calc(-50% / 5 / 11 * 12) calc(-50% / 5);
 }
