--- a/examples/assets/css/shogiground.css
+++ b/examples/assets/css/shogiground.css
@@ -7,7 +7,7 @@
 
 .sg-wrap {
   position: relative;
-  box-sizing: content-box;
+  box-sizing: border-box;
   width: 100%;
   /* Correct shogi board ratio is 11:12, for square board, you can use height 100% */
   height: calc(100% / 11 * 12);
@@ -22,6 +22,22 @@ sg-board {
   left: 0;
 }
 
+sg-board piece {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scale(0.5);
+  width: calc(200% / 9);
+  height: calc(200% / 9);
+  margin: calc(-50% / 9 / 11 * 12) calc(-50% / 9);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 3;
+  pointer-events: none;
+  will-change: auto;
+}
+
 sg-squares,
 sg-pieces,
 sg-promotion {
@@ -33,14 +49,16 @@ sg-promotion {
   height: 100%;
   line-height: 0;
   user-select: none;
+  box-sizing: border-box;
 }
 
 sg-pieces {
-  pointer-events: none;
+  cursor: pointer;
 }
 
 sg-promotion {
   z-index: 5;
+  background-color: #0000003f;
 }
 sg-promotion.active {
   display: block;
@@ -69,6 +87,7 @@ sg-promotion promotion {
 sg-promotion promotion piece {
   display: block;
   position: relative;
+  transform: scale(1);
   width: 100%;
   height: 50%;
   margin: 0;
@@ -85,8 +104,8 @@ sg-promotion promotion piece:hover {
 sg-squares {
   display: grid;
   grid-template: repeat(9, 1fr) / repeat(9, 1fr);
-  cursor: pointer;
   background-size: cover;
+  pointer-events: none;
 }
 sg-squares sq.move-dest {
   background: radial-gradient(rgba(20, 85, 30, 0.5) 22%, #208530 0, rgba(0, 0, 0, 0.3) 0, rgba(0, 0, 0, 0) 0);
@@ -101,10 +120,10 @@ sg-squares sq.oc.move-dest {
 sg-squares sq.oc.premove-dest {
   background: radial-gradient(transparent 0%, transparent 80%, rgba(20, 30, 85, 0.2) 80%);
 }
-sg-squares sq.move-dest:hover {
+sg-squares sq.move-dest.hover {
   background: rgba(20, 85, 30, 0.3);
 }
-sg-squares sq.premove-dest:hover {
+sg-squares sq.premove-dest.hover {
   background: rgba(20, 30, 85, 0.2);
 }
 sg-squares sq.last-move {
@@ -125,22 +144,6 @@ sg-squares sq.check {
 sg-squares sq.current-premove {
   background-color: rgba(20, 30, 85, 0.5);
 }
-sg-pieces piece,
-sg-free-pieces piece,
-sg-promotion piece {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: calc(200% / 9);
-  height: calc(200% / 9);
-  margin: calc(-50% / 11 * 12 / 9) calc(-50% / 9);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: 3;
-  pointer-events: none;
-  will-change: auto;
-}
 sg-pieces piece.dragging {
   will-change: transform;
   z-index: 10;
@@ -152,12 +155,29 @@ sg-pieces piece.fading {
   z-index: 2;
   opacity: 0.5;
 }
-.sg-wrap square.move-dest:hover {
-  background-color: rgba(20, 85, 30, 0.3);
-}
-.sg-wrap piece.ghost {
+sg-pieces piece.ghost {
   opacity: 0.3;
 }
+piece.dragging.touch {
+  top: -5%;
+}
+
+sg-square-over {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: calc(100% / 9);
+  height: calc(100% / 9);
+  background: #00000050;
+  border-radius: 50%;
+  padding: 5%;
+  margin: calc(-5%);
+  will-change: transform;
+  transition: 100ms;
+  pointer-events: none;
+  z-index: 3;
+}
+
 .sg-wrap sg-free-pieces,
 .sg-wrap .sg-shapes,
 .sg-wrap .sg-custom-svgs {
@@ -205,20 +225,20 @@ sg-pieces piece.fading {
   flex-flow: column-reverse;
   height: 100%;
   width: 12px;
+  text-transform: uppercase;
 }
-.sg-wrap coords.ranks.black {
+.sg-wrap coords.ranks.gote {
   flex-flow: column;
 }
 .sg-wrap coords.files {
-  bottom: -16px;
+  top: -12px;
   left: 0;
   flex-flow: row;
   width: 100%;
-  height: 16px;
-  text-transform: uppercase;
+  height: 12px;
   text-align: center;
 }
-.sg-wrap coords.files.black {
+.sg-wrap coords.files.gote {
   flex-flow: row-reverse;
 }
 .sg-wrap coords coord {
