--- a/examples/assets/css/hands.css
+++ b/examples/assets/css/hands.css
@@ -1,39 +1,10 @@
 .sg-wrap {
   width: 100%;
   height: 0;
-  padding-bottom: calc(100% * 12 / 9);
+  padding-bottom: calc(100% / 11 * 12);
 }
 
-.sg-wrap sg-board {
-  top: calc(100% / 11 + 10px);
-  height: calc(100% / 11 * 9);
-}
-
-.sg-wrap sg-hand {
-  position: absolute;
-  width: 100%;
-  height: calc(100% / 11);
-  display: flex;
-  flex: 1;
-  justify-content: space-around;
-}
-.sg-wrap sg-hand.hand-bottom {
-  top: calc(100% / 11 * 10 + 20px);
-}
-
-.sg-wrap sg-hand piece {
-  display: block;
-  position: relative;
-  width: calc(100% / 7);
-  height: 100%;
-  margin: unset;
-  cursor: pointer;
-  pointer-events: auto;
-  border: 2px solid transparent;
-  background-repeat: no-repeat;
-}
-
-.sg-wrap sg-hand piece::after {
+sg-hand piece::after {
   content: attr(data-nb);
   top: 0;
   right: 0;
@@ -45,11 +16,67 @@
   color: black;
   background-color: coral;
 }
-.sg-wrap sg-hand.hand-bottom piece::after {
+sg-hand.hand-bottom piece::after {
   top: unset;
   bottom: 0;
+}
+piece[data-nb='0'] {
+  opacity: 0.3;
+}
+piece[data-nb='0']::after {
+  content: none;
 }
 
 .sg-wrap sg-hand piece.selected {
   border: 2px solid green;
+}
+
+.wrap {
+  display: flex;
+}
+
+.main-board {
+  align-self: center;
+}
+
+.hand-wrap {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  background-image: url('../board/new_board.png');
+  background-size: cover;
+  margin: 0 1rem;
+  border: 1px solid black;
+}
+.hand-wrap sg-hand {
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row-reverse;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+#hand-bottom {
+  align-self: flex-end;
+}
+
+sg-hand piece {
+  display: block;
+  position: relative;
+  width: calc(500px / 9);
+  height: calc(500px / 9);
+  margin: unset;
+  cursor: pointer;
+  pointer-events: auto;
+  border: 2px solid transparent;
+  background-repeat: no-repeat;
+}
+
+sg-hand piece.selected {
+  background-color: rgba(20, 85, 30, 0.5);
 }
