--- a/examples/assets/css/shogiground.css
+++ b/examples/assets/css/shogiground.css
@@ -65,26 +65,31 @@ sg-promotion.active {
   pointer-events: auto;
 }
 
-sg-promotion promotion {
-  display: flex;
-  flex-direction: column;
+sg-promotion sg-promotion-square {
   position: absolute;
   top: 0;
   left: 0;
   width: calc(100% / 9);
-  height: calc(100% / 9 * 2);
+  height: calc(100% / 9);
+}
+
+sg-promotion sg-promotion-choices {
+  display: flex;
+  flex-direction: column;
   background-color: #2e2e2e;
   box-shadow: 3px 3px 7px #000000aa;
   border-radius: 10px;
   cursor: pointer;
+  width: 100%;
+  height: 200%;
 }
 
-.orientation-gote sg-promotion promotion {
+.orientation-gote sg-promotion sg-promotion-choices {
   margin: calc(-100% / 11 * 12 / 9) 0;
   flex-direction: column-reverse;
 }
 
-sg-promotion promotion piece {
+sg-promotion sg-promotion-choices piece {
   display: block;
   position: relative;
   transform: scale(1);
@@ -97,7 +102,7 @@ sg-promotion promotion piece {
   background-color: #2e2e2e;
 }
 
-sg-promotion promotion piece:hover {
+sg-promotion sg-promotion-choices piece:hover {
   border-radius: 0px;
 }
 
