--- a/examples/assets/css/themes/bird.css
+++ b/examples/assets/css/themes/bird.css
@@ -22,3 +22,13 @@
   height: 7px;
   background-color: black;
 }
+
+.sg-wrap .sg-shapes circle.primary {
+  stroke: #f08a04;
+}
+.sg-wrap .sg-shapes line.primary {
+  stroke: #f08a04;
+}
+.sg-wrap .sg-shapes marker#arrowhead-primary path {
+  fill: #f08a04;
+}
