--- a/examples/assets/css/hands.css
+++ b/examples/assets/css/hands.css
@@ -11,9 +11,10 @@ sg-hand piece::after {
   padding: 3px 0.3em;
   font-weight: bold;
   font-size: 1.5em;
-  color: black;
-  background-color: coral;
-  z-index: 5;
+  color: white;
+  background-color: #2e2e2e;
+  border: 1px solid #eee;
+  border-radius: 3px;
 }
 .hand-bottom sg-hand piece::after {
   top: unset;
@@ -54,6 +55,13 @@ piece[data-nb='0']:not(.selected):not(.drawing)::after {
 
 .hand-bottom {
   align-self: flex-end;
+}
+sg-hand.promotion::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #0000003f;
 }
 
 sg-hand piece {
