--- a/examples/assets/css/shogiground.css
+++ b/examples/assets/css/shogiground.css
@@ -93,7 +93,7 @@ sg-promotion sg-promotion-choices {
 }
 
 .orientation-gote sg-promotion sg-promotion-choices {
-  margin: calc(-100% / 11 * 12 / 9) 0;
+  margin: calc(-100% / 11 * 12) 0;
   flex-direction: column-reverse;
 }
 
@@ -171,7 +171,7 @@ sg-squares sq.current-pre {
   background-color: rgba(20, 30, 85, 0.5);
 }
 sg-pieces piece.anim {
-  z-index: 3;
+  z-index: 4;
 }
 sg-pieces piece.fading {
   z-index: 2;
