Set printWidth to 100

--- a/examples/assets/css/shogiground.css
+++ b/examples/assets/css/shogiground.css
@@ -124,10 +124,20 @@ sg-squares {
   pointer-events: none;
 }
 sg-squares sq.dest {
-  background: radial-gradient(rgba(20, 85, 30, 0.5) 22%, #208530 0, rgba(0, 0, 0, 0.3) 0, rgba(0, 0, 0, 0) 0);
+  background: radial-gradient(
+    rgba(20, 85, 30, 0.5) 22%,
+    #208530 0,
+    rgba(0, 0, 0, 0.3) 0,
+    rgba(0, 0, 0, 0) 0
+  );
 }
 sg-squares sq.pre-dest {
-  background: radial-gradient(rgba(20, 30, 85, 0.5) 22%, #203085 0, rgba(0, 0, 0, 0.3) 0, rgba(0, 0, 0, 0) 0);
+  background: radial-gradient(
+    rgba(20, 30, 85, 0.5) 22%,
+    #203085 0,
+    rgba(0, 0, 0, 0.3) 0,
+    rgba(0, 0, 0, 0) 0
+  );
 }
 sg-squares sq.oc.dest {
   background: radial-gradient(transparent 0%, transparent 80%, rgba(20, 85, 0, 0.3) 80%);
@@ -136,10 +146,18 @@ sg-squares sq.oc.pre-dest {
   background: radial-gradient(transparent 0%, transparent 80%, rgba(20, 30, 85, 0.2) 80%);
 }
 sg-squares sq.last-dest.oc.dest {
-  background: radial-gradient(rgba(155, 199, 0, 0.41) 0%, rgba(155, 199, 0, 0.41) 80%, rgba(20, 85, 0, 0.3) 80%);
+  background: radial-gradient(
+    rgba(155, 199, 0, 0.41) 0%,
+    rgba(155, 199, 0, 0.41) 80%,
+    rgba(20, 85, 0, 0.3) 80%
+  );
 }
 sg-squares sq.last-dest.oc.pre-dest {
-  background: radial-gradient(rgba(155, 199, 0, 0.41) 0%, rgba(155, 199, 0, 0.41) 80%, rgba(20, 30, 85, 0.2) 80%);
+  background: radial-gradient(
+    rgba(155, 199, 0, 0.41) 0%,
+    rgba(155, 199, 0, 0.41) 80%,
+    rgba(20, 30, 85, 0.2) 80%
+  );
 }
 sg-squares sq.dest.hover,
 sg-squares sq.last-dest.oc.dest.hover {
